# fastapi-mongodb-utils

./: .coderabbit.yaml  .gitignore  404.html  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sonar-project.properties
.github/: CODEOWNERS  dependabot.yml  release.yml
.github/workflows/: on_pr.yml  on_push.yml  on_release.yml
.github/worklofws/: build.yml
docs/: how-to-guides.md  index.md  reference.md
explanation/: index.html
fastapi_mongodb_utils/: __init__.py  date.py  fastapi.py
how-to-guides/: index.html
reference/: index.html
search/: search_index.json
tests/unit/: test_date.py  test_fastapi.py
tutorials/: index.html
