[tool.poetry]
name = "fastapi-mongodb-utils"
version = "0.1.0"
description = "FastAPI utilities for MongoDB"
authors = ["Luis Rueda <userlerueda@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_mongodb_utils"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dateutil = "^2.9.0.post0"

[tool.poetry.group.dev.dependencies]
debugpy = "*"
rich = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
pytest-env = "*"
ruff = "*"

[tool.pytest.ini_options]
addopts = "-rA -s -vv --cov=fastapi_mongodb_utils --cov-report=term-missing:skip-covered"
testpaths = ["tests/unit"]
log_cli = true
log_cli_level = "INFO"
env = [
  "ENVIRONMENT=local",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-ignore = ["C901"]
select = [
  "C",
  "E4",
  "E7",
  "E9",
  "F",
  "D103",
  "D102",
  "D101",
  "D200",
  "D213",
  "D202",
  "D400",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"