[tool.poetry]
name = "fastapi-mongodb-utils"
version = "0.2.0"
description = "FastAPI utilities for MongoDB"
authors = ["Luis Rueda <userlerueda@gmail.com>"]
readme = "README.md"
packages = [{ include = "fastapi_mongodb_utils" }]
classifiers = [
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python",
  "Topic :: Internet",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development",
  "Typing :: Typed",
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Framework :: FastAPI",
  "Framework :: Pydantic",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
fastapi = "^0"
motor = "^3.2"
python = "^3.10"
python-dateutil = "^2.8"

[tool.poetry.group.dev.dependencies]
debugpy = "*"
rich = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
pytest-env = "*"
ruff = "*"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.34"
mkdocstrings = { extras = ["python"], version = "^0.26.1" }

[tool.pytest.ini_options]
addopts = "-rA -s -vv --cov fastapi_mongodb_utils --cov-report xml:coverage.xml --cov-report term-missing:skip-covered"
testpaths = ["tests/unit"]
log_cli = true
log_cli_level = "INFO"
env = ["ENVIRONMENT=local"]

[tool.coverage.run]
relative_files = true

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-ignore = ["C901"]
select = [
  "C",
  "E4",
  "E7",
  "E9",
  "F",
  "D103",
  "D102",
  "D101",
  "D200",
  "D213",
  "D202",
  "D400",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
